# ai-website-generator

./: .clinerules  .env.example  .gitignore  Makefile  README.md  check_preview.py  debug_parsing.py  debug_preview_server.py  pyproject.toml  test_file_parser.py  test_integrated_template_system.py  test_phase3_endpoints.py  test_phase4_preview.py  test_phase5_gallery.py  test_phase6_router.py  test_project_structure.py  test_template_injection.py
backend/: __init__.py  main.py
backend/agents/: __init__.py  product_manager.py  software_engineer.py  ui_designer.py
backend/api/: routes.py
backend/crew/: __init__.py  website_crew.py
backend/templates/: index.html.template  package.json.template
backend/utils/: file_parser.py  project_manager.py  project_preview.py  project_structure.py  template_engine.py
data/: projects.json
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
memory-bank/: activeContext.md  current-issues-plan.md  current-status-summary.md  file-parsing-implementation-plan.md  major-achievements.md  phase3-api-integration-plan.md  phase4-live-preview-plan.md  phase5-preview-gallery-plan.md  phase6-react-router-previews.md  productContext.md  progress.md  project.md  projectbrief.md  systemPatterns.md  techContext.md  template-injection-plan.md
memory-bank/official-documentation/: crewai.md  mcp-servers.md  poetry.md  shadcn-ui.md
scripts/testing/: apply_vite_fix.py  apply_vite_templates.py  debug_new_parsing.py  debug_regex_pattern.py  test_complete_pipeline.py  test_enhanced_generation.py  (+11 more)
(+5 files in other folders)
